--- a/style/base/_common.scss
+++ b/style/base/_common.scss
@@ -1,6 +1,6 @@
 
 body {
-    font-family: 'Playfair', 'Noto Sans KR', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
     word-break: keep-all;
 }
 
