--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -1,3 +1,74 @@
 .footer {
+  height: 150px;
+  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  .container {
+
+  }
+  .top{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 19px;
+
+
+  }
+  .logo{
+    font-size: 14px;
+    font-weight: 900;
+    color: #ffffff;
+    padding: 0 30px;
+
+  }
+  .menu{
+    font-size: 14px;
+    font-weight: 400;
+    color: #cccccc;
+    display: flex;
+    .menu-item{
+      padding: 0 10px;
+
+    }
+
+  }
+  //.lang{
+  //  width: 395px;
+  //  display: flex;
+  //  justify-content: flex-end;
+
+    .btn-language {
+      width: 93px;
+      height: 32px;
+      background: #111111;
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      position: absolute;
+      top: 43px;
+      bottom: 75px;
+      right: 150px;
+      img{
+        margin-left: 25px;
+      }
+
+    }
+  //}
+
+
+
+
+
+  .copy{
+    font-size: 10px;
+    font-weight: 300;
+    color: #555555;
+    text-align: center;
+
+  }
+
 
 }
