--- a/style/components/_layout.scss
+++ b/style/components/_layout.scss
@@ -1,6 +1,7 @@
 html, body {height:100%;}
 
 #wrap {
+    padding-top: 80px;
 
 }
 
@@ -9,4 +10,30 @@ html, body {height:100%;}
     margin: 0 auto;
     padding: 0 15px;
 
+}
+.prefix-dot{
+    &::before{
+        content: '';
+        width: 12px;
+        height: 12px;
+        display: inline-block;
+        border: 3px solid #fff;
+        border-radius: 50%;
+        margin-right: 3px;
+        vertical-align: middle;
+
+
+
+    }
+}
+.prefix-line {
+    &::after{
+        content: '';
+        width: 1px;
+        height: 12px;
+        display: inline-block;
+        background-color: #222222;
+        margin-left: 10px;
+        vertical-align: middle;
+    }
 }
